Fixed: - Changed required and graded names - added optional instead of graded - issue with explanation not showing

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -47,6 +47,10 @@ footer{
 	top: 50% !important;
 }
 
+span.error, small.error{
+  margin-bottom: 0
+}
+
 /*MODAL*/
 .reveal-modal{
 	/*position: absolute !important;*/
